<resources>
    <string name="app_name">FirebaseLogin</string>
    <string name="textLoginUsername">Correo electrónico</string>
    <string name="textLoginPassword">Contraseña</string>
    <string name="btForgotPass">¿Olvidaste tu contraseña?</string>
    <string name="btLogin">entrar</string>
    <string name="tvCreateAccount">¿Aún no tienes una cuenta?</string>
    <string name="btCreateAccount">Registrarse</string>
    <string name="btLoginFacebook">Entrar con Facebook</string>
    <string name="facebook_app_id">1119193595479389</string>
    <string name="facebook_client_token">5b3b8d965702c4868e97730ca2e37a5c</string>
    <string name="fb_login_protocol_scheme">fb1119193595479389</string>
    <string name="your_web_client_id">1068638417166-qh26h75c9cr367svdkilbfgmpe5i7hq4.apps.googleusercontent.com</string>

</resources>